--- a/css/deaddove-style.css
+++ b/css/deaddove-style.css
@@ -27,3 +27,66 @@
 .deaddove-blur {
     filter: blur(8px);
 }
+.widget.widget_custom_user_widget{
+    display: none;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+}
+.deaddove-block-description {
+    filter: blur(5px);  
+    cursor: pointer;
+    user-select: none !important;  
+    -webkit-user-select: none;  
+    -moz-user-select: none;  
+    -ms-user-select: none;  
+    /* pointer-events: none;   */
+}
+
+.deaddove-blog-warning{
+    filter: blur(5px);  
+    user-select: none !important; 
+    -webkit-user-select: none;  
+    -moz-user-select: none;  
+    -ms-user-select: none;  
+    /* pointer-events: none;   */
+}
+.deaddove-media-warning{
+    filter: blur(5px);  
+    user-select: none !important; 
+    -webkit-user-select: none;  
+    -moz-user-select: none;  
+    -ms-user-select: none; 
+}
+
+/* 
+//////////////////////////
+DEAD-DOVE SETTING FORM
+///////////////////////
+
+*/
+#deaddove-settings-form {
+    border: 2px solid #ddd;  
+    border-radius: 8px;  
+    padding: 20px;  
+    /* background: #f9f9f9;   */
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);  
+      
+}
+
+#deaddove-settings-form label {
+    font-size: 14px;
+    color: #333;
+}
+
+#deaddove-settings-form button {
+    width: 100%;  
+    border-radius: 5px;
+    padding: 8px;
+    font-size: 16px;
+}
+
+.description {
+    font-size: 12px;
+    color: #666;
+}
