--- a/css/deaddove-style.css
+++ b/css/deaddove-style.css
@@ -49,6 +49,7 @@
     -webkit-user-select: none;  
     -moz-user-select: none;  
     -ms-user-select: none;  
+    cursor: pointer;
     /* pointer-events: none;   */
 }
 .deaddove-media-warning{
@@ -57,8 +58,16 @@
     -webkit-user-select: none;  
     -moz-user-select: none;  
     -ms-user-select: none; 
+    cursor: pointer;
 }
-
+.dd-forum-warning{
+       filter: blur(5px);  
+    user-select: none !important; 
+    -webkit-user-select: none;  
+    -moz-user-select: none;  
+    -ms-user-select: none; 
+    cursor: pointer;
+}
 /* 
 //////////////////////////
 DEAD-DOVE SETTING FORM
